Signed-off-by: wade009 <123135180@qq.com>

--- a/tinysquare-api/pom.xml
+++ b/tinysquare-api/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>tinysquare-api</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>tinysquare-api Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
