--- a/tinysquare-api/src/main/resources/config/product/db.properties
+++ b/tinysquare-api/src/main/resources/config/product/db.properties
@@ -9,6 +9,7 @@ minIdle=10
 testOnBorrow=true
 testOnReturn=false
 testWhileIdle=true
+numTestsPerEvictionRun=100
 validationQuery=SELECT 1
 validationInterval=30000
 timeBetweenEvictionRunsMillis=30000
